feat: add resampler
Signed-off-by: Tony Gorez <gorez.tony@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ pkg_check_modules(AVCODEC REQUIRED libavcodec)
 pkg_check_modules(AVFORMAT REQUIRED libavformat)
 pkg_check_modules(AVUTIL REQUIRED libavutil)
 pkg_check_modules(AVDEVICE REQUIRED libavdevice)
+pkg_check_modules(SWRESAMPLE REQUIRED libswresample)
 
 # Add executable
 add_executable(ffmpeg_example main.c)
@@ -17,6 +18,7 @@ target_include_directories(ffmpeg_example PRIVATE
     ${AVFORMAT_INCLUDE_DIRS}
     ${AVUTIL_INCLUDE_DIRS}
     ${AVDEVICE_INCLUDE_DIRS}
+    ${SWRESAMPLE_INCLUDE_DIRS}
 )
 
 # Link directories
@@ -25,6 +27,7 @@ target_link_directories(ffmpeg_example PRIVATE
     ${AVFORMAT_LIBRARY_DIRS}
     ${AVUTIL_LIBRARY_DIRS}
     ${AVDEVICE_LIBRARY_DIRS}
+    ${SWRESAMPLE_LIBRARY_DIRS}
 )
 
 # Link libraries with full paths
@@ -33,4 +36,5 @@ target_link_libraries(ffmpeg_example PRIVATE
     ${AVFORMAT_LDFLAGS}
     ${AVUTIL_LDFLAGS}
     ${AVDEVICE_LDFLAGS}
+    ${SWRESAMPLE_LDFLAGS}
 ) 
