chore: update doc and change prog name
Signed-off-by: Tony Gorez <gorez.tony@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
-project(capture_av1 C)
+project(capture C)
 
-add_executable(capture_av1 main.c)
+add_executable(capture main.c)
 
-target_include_directories(capture_av1 PRIVATE /opt/homebrew/include)
-target_link_directories(capture_av1 PRIVATE /opt/homebrew/lib)
-target_link_libraries(capture_av1 PRIVATE
+target_include_directories(capture PRIVATE /opt/homebrew/include)
+target_link_directories(capture PRIVATE /opt/homebrew/lib)
+target_link_libraries(capture PRIVATE
   avdevice
   avformat
   avcodec
